gccida/c0/find_reloads_address_1
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5627:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5632:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type type, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5641:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v13; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5642:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v14; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5643:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v15; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5644:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v16; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5645:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v17; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5646:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v18; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5647:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v19; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5648:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v20; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5655:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v28; // [rsp+BCh] [rbp-244h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5656:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v29; // [rsp+C0h] [rbp-240h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5658:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // [rsp+1F0h] [rbp-110h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5661:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // [rsp+1FCh] [rbp-104h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5664:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class classa; // [rsp+218h] [rbp-E8h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5666:4: error: expected ';' after expression
rtx tem_2; // [rsp+220h] [rbp-E0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5666:5: error: use of undeclared identifier 'tem_2'
rtx tem_2; // [rsp+220h] [rbp-E0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5672:4: error: expected ';' after expression
rtx tem_0; // [rsp+258h] [rbp-A8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/reload.c:5672:5: error: use of undeclared identifier 'tem_0'
rtx tem_0; // [rsp+258h] [rbp-A8h] BYREF 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/find_reloads_address_1/src/obj/reload.o] Error 1
